--- a/blocks/commerce-checkout/commerce-checkout.css
+++ b/blocks/commerce-checkout/commerce-checkout.css
@@ -1,3 +1,17 @@
+/* PARTNER-PAY payment method */
+.checkout__payment-method-partners-payment .dropin-card--secondary {
+  border: var(--shape-border-width-1) solid var(--color-warning-500);
+}
+
+.checkout__payment-method-partners-payment h3 {
+  font: var(--type-headline-2-strong-font);
+  letter-spacing: var(--type-headline-2-strong-letter-spacing);
+}
+
+.checkout__payment-method-partners-payment--message {
+  color: var(--color-warning-500);
+}
+
 /* stylelint-disable selector-class-pattern */
 .checkout__content {
   display: grid;
